{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 39,
  "lineage": "d0d8cad1-24b4-f8b8-b78a-7b6f56bc0fb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0694cff3ccce6f8be",
            "arn": "arn:aws:ec2:us-east-2:493042495566:elastic-ip/eipalloc-0694cff3ccce6f8be",
            "association_id": "eipassoc-050f034850f0ba177",
            "domain": "vpc",
            "id": "eipalloc-0694cff3ccce6f8be",
            "instance": "i-0e23975e4120938d3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07d7a1c968e014dfc",
            "private_dns": "ip-10-0-0-147.us-east-2.compute.internal",
            "private_ip": "10.0.0.147",
            "public_dns": "ec2-18-190-252-54.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.252.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-jenkins-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-jenkins-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_ec2",
            "aws_iam_role.jenkins_ec2",
            "aws_instance.jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.jenkins-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076a0cd633245119f",
            "arn": "arn:aws:ec2:us-east-2:493042495566:elastic-ip/eipalloc-076a0cd633245119f",
            "domain": "vpc",
            "id": "eipalloc-076a0cd633245119f",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-147-216-180.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.216.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd3a72b73bae5f05",
            "arn": "arn:aws:ec2:us-east-2:493042495566:elastic-ip/eipalloc-0dd3a72b73bae5f05",
            "domain": "vpc",
            "id": "eipalloc-0dd3a72b73bae5f05",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-147-175-177.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.175.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eab37cfdc33e8e65",
            "arn": "arn:aws:ec2:us-east-2:493042495566:instance/i-0e23975e4120938d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "todo-app-jenkins-instance-profile",
            "id": "i-0e23975e4120938d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d7a1c968e014dfc",
            "private_dns": "ip-10-0-0-147.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.147",
            "public_dns": "ec2-3-145-115-121.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.115.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:493042495566:key/7ff79918-b581-4e47-9e00-5742689f2ed7",
                "throughput": 125,
                "volume_id": "vol-07b2318019881f01f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02908571aba24a88b",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-jenkins-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053b2115ef66e4dd4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_ec2",
            "aws_iam_role.jenkins_ec2",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.jenkins-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:internet-gateway/igw-0cac5d958a306136a",
            "id": "igw-0cac5d958a306136a",
            "owner_id": "493042495566",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-igw"
            },
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076a0cd633245119f",
            "association_id": "eipassoc-06777a83ce345e1c6",
            "connectivity_type": "public",
            "id": "nat-0e892211eb4483b4d",
            "network_interface_id": "eni-0d43e6142eec83d7f",
            "private_ip": "10.0.0.176",
            "public_ip": "3.147.216.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02908571aba24a88b",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-nat-gw-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd3a72b73bae5f05",
            "association_id": "eipassoc-0991231b21746b9d4",
            "connectivity_type": "public",
            "id": "nat-035ab04039d3ca746",
            "network_interface_id": "eni-034d8c023213f4d52",
            "private_ip": "10.0.1.63",
            "public_ip": "3.147.175.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c276fe334874c788",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-nat-gw-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:route-table/rtb-09fa66e79992f7060",
            "id": "rtb-09fa66e79992f7060",
            "owner_id": "493042495566",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e892211eb4483b4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:route-table/rtb-0289e2283120cff26",
            "id": "rtb-0289e2283120cff26",
            "owner_id": "493042495566",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035ab04039d3ca746",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:route-table/rtb-0f7e5e23cdc68edae",
            "id": "rtb-0f7e5e23cdc68edae",
            "owner_id": "493042495566",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cac5d958a306136a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094cbf778e25abb1d",
            "route_table_id": "rtb-09fa66e79992f7060",
            "subnet_id": "subnet-07460525c35254c9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc48c56a31f22126",
            "route_table_id": "rtb-0289e2283120cff26",
            "subnet_id": "subnet-00ec0480d75a44644"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc14c50092a8da2",
            "route_table_id": "rtb-0f7e5e23cdc68edae",
            "subnet_id": "subnet-02908571aba24a88b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067a16e8f989301b9",
            "route_table_id": "rtb-0f7e5e23cdc68edae",
            "subnet_id": "subnet-0c276fe334874c788"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:security-group/sg-0a9c28ba1c1188555",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9c28ba1c1188555",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "todo-app-alb-sg",
            "name_prefix": "",
            "owner_id": "493042495566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:security-group/sg-007ed1532a53f5589",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007ed1532a53f5589",
            "ingress": [],
            "name": "todo-app-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "493042495566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:security-group/sg-0480b396626109e3a",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0480b396626109e3a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach backend pods on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9c28ba1c1188555"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach pods on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9c28ba1c1188555"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach pods on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9c28ba1c1188555"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to reach nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-007ed1532a53f5589"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "todo-app-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "493042495566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:security-group/sg-053b2115ef66e4dd4",
            "description": "Security group for Jenkins EC2 server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053b2115ef66e4dd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube web UI",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "todo-app-jenkins-sg",
            "name_prefix": "",
            "owner_id": "493042495566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-jenkins-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_ingress_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Jenkins to reach EKS API",
            "from_port": 443,
            "id": "sgrule-3070203615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007ed1532a53f5589",
            "security_group_rule_id": "sgr-04f796d0459631b98",
            "self": false,
            "source_security_group_id": "sg-053b2115ef66e4dd4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.jenkins",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_ingress_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to talk to cluster API",
            "from_port": 443,
            "id": "sgrule-1986808593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007ed1532a53f5589",
            "security_group_rule_id": "sgr-0bc27717648ec0b70",
            "self": false,
            "source_security_group_id": "sg-0480b396626109e3a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:subnet/subnet-07460525c35254c9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07460525c35254c9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493042495566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:subnet/subnet-00ec0480d75a44644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec0480d75a44644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493042495566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:subnet/subnet-02908571aba24a88b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02908571aba24a88b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "493042495566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:subnet/subnet-0c276fe334874c788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c276fe334874c788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "493042495566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d9c12912411f5900"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:493042495566:vpc/vpc-0d9c12912411f5900",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7e1d9e74a70fc5c",
            "default_route_table_id": "rtb-0b2516cb77f68f53d",
            "default_security_group_id": "sg-0af7df173b1359c06",
            "dhcp_options_id": "dopt-0c7e2dfd2247ecbde",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9c12912411f5900",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2516cb77f68f53d",
            "owner_id": "493042495566",
            "tags": {
              "Environment": "dev",
              "Name": "todo-app-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "todo-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}